--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,69 +1,35 @@
-# ===== CONFIGURAÇÃO GERAL =====
-spring.application.name=Sistema de Comparecimento
-
-# ===== CONFIGURAÇÃO DO SERVIDOR =====
 server.port=8080
 server.servlet.context-path=/api
 
-# ===== CONFIGURAÇÃO DO BANCO DE DADOS =====
-# PostgreSQL (Produção)
 spring.datasource.url=jdbc:postgresql://localhost:5432/comparecimento_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ===== CONFIGURAÇÃO JPA/HIBERNATE =====
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# ===== CONFIGURAÇÃO DE UPLOAD =====
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+cors.allowed-origins=http://localhost:3000,http://localhost:3001
 
-# ===== CONFIGURAÇÃO DE CORS =====
-cors.allowed-origins=http://localhost:3000,http://localhost:3001,https://seu-dominio.com
-cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-cors.allowed-headers=*
-cors.allow-credentials=true
+jwt.secret=minha-chave-secreta-super-segura-para-jwt-tokens-sistema-comparecimento-tjba-2024
+jwt.access-token.expiration=3600000
+jwt.refresh-token.expiration=86400000
 
-# ===== CONFIGURAÇÃO JWT =====
-jwt.secret=${JWT_SECRET:sistema-comparecimento-tjba-chave-secreta-muito-longa-e-segura-2024}
-jwt.expiration=86400000
-jwt.refresh-expiration=604800000
 
-# ===== CONFIGURAÇÃO DE EMAIL =====
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME:}
-spring.mail.password=${MAIL_PASSWORD:}
+spring.mail.username=seu-email@gmail.com
+spring.mail.password=sua-senha-app
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# ===== CONFIGURAÇÃO DE ARQUIVOS ESTÁTICOS =====
-spring.web.resources.static-locations=classpath:/static/,file:./uploads/
-spring.mvc.static-path-pattern=/static/**
 
-# ===== CONFIGURAÇÃO DE LOGS =====
-logging.level.com.tjba.comparecimento=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web.cors=DEBUG
+viacep.api.url=https://viacep.com.br/ws
+
+
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# ===== CONFIGURAÇÃO DE PERFIL =====
-spring.profiles.active=dev
-
-# ===== CONFIGURAÇÃO PARA DESENVOLVIMENTO =====
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-
-# ===== HEADERS DE SEGURANÇA =====
-security.headers.frame-options=SAMEORIGIN
-security.headers.content-type-options=nosniff
-security.headers.xss-protection=1; mode=block
-
-# ===== CONFIGURAÇÃO DE TIMEZONE =====
-spring.jackson.time-zone=America/Sao_Paulo
+logging.level.com.tjba.comparecimento=DEBUG
