Fix DashboardService bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,17 @@ server.servlet.context-path=/api
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/comparecimento_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 cors.allowed-origins=http://localhost:3000,http://localhost:3001
 
-jwt.secret=minha-chave-secreta-super-segura-para-jwt-tokens-sistema-comparecimento-tjba-2024
+jwt.secret=minha-chave
 jwt.access-token.expiration=3600000
 jwt.refresh-token.expiration=86400000
 
